z-PENTESTING/report-builder/inputs/saopaulo/aws_saopaulo_route_tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-01895ef2d59800b60",
                    "RouteTableId": "rtb-062523785cdc7efa4",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-062523785cdc7efa4",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0677c9ea671804fbb",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0bea9cbbaeba52185",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0f416e5ea8bff5764",
                    "RouteTableId": "rtb-0098559ed11200127",
                    "SubnetId": "subnet-0c6fa2ce2e9d69eb1",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0fe8e09a3de3cfd5e",
                    "RouteTableId": "rtb-0098559ed11200127",
                    "SubnetId": "subnet-01c1ebe4ff61733c6",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0098559ed11200127",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.100.0.0/16",
                    "TransitGatewayId": "tgw-06a8ff28c840a98ed",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.200.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-6aa54003",
                    "GatewayId": "vpce-041a8670ec8b7b0d0",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Private_Route"
                }
            ],
            "VpcId": "vpc-0c415a6b4d2f2c328",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0d7694ada88d8a334",
                    "RouteTableId": "rtb-0750e3dc55262077c",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0750e3dc55262077c",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.200.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0c415a6b4d2f2c328",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0f09ea36c1a2e104b",
                    "RouteTableId": "rtb-0bb01e385f30ea1e1",
                    "SubnetId": "subnet-0ab577186fe90fc0a",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-083e68bab811f4cd2",
                    "RouteTableId": "rtb-0bb01e385f30ea1e1",
                    "SubnetId": "subnet-04d8c2e7f2c8e34a1",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0bb01e385f30ea1e1",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.200.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-07d7cf59092e5e333",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Public_Route"
                }
            ],
            "VpcId": "vpc-0c415a6b4d2f2c328",
            "OwnerId": "814910273374"
        }
    ]
}
